# aOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  aOpenGLConfig.cmake
code/: CMakeLists.txt
code/include/: aOpenGL.h
code/include/aOpenGL/: app.h  appmanager.h  camera.h  config.h  eigentype.h  fbx.h  file.h  ik.h  image.h  joint.h  light.h  material.h  mesh.h  model.h  motion.h  render.h  renderoption.h  text.h  texture.h  util.h
code/include/aOpenGL/core/: mesh.h  primitive.h  shader.h
code/include/aOpenGL/kin/: kindisp.h  kinmodel.h  kinmotion.h  kinpose.h
code/src/: app.cpp  appmanager.cpp  camera.cpp  eigentype.cpp  fbx.cpp  ik.cpp  image.cpp  joint.cpp  light.cpp  material.cpp  mesh.cpp  model.cpp  render.cpp  renderoption.cpp  text.cpp  texture.cpp  util.cpp
code/src/core/: mesh.cpp  primitive.cpp  shader.cpp
code/src/core/primitive/: Cubesphere.cpp  Cubesphere.h  Cylinder.cpp  Cylinder.h  Icosphere.cpp  Icosphere.h  Sphere.cpp  Sphere.h
code/src/fbx/: fbx_animation.cpp  fbx_material.cpp  fbx_mesh.cpp  fbx_skeleton.cpp  fbx_skin.cpp  fbx_texture.cpp  fbxparser.cpp  fbxparser.h  keyframe.cpp  keyframe.h
code/src/kin/: kindisp.cpp  kinmodel.cpp  kinmotion.cpp  kinpose.cpp
data/fbx/etc/: axis.fbx
data/fbx/ybot/model/: ybot.fbx
data/fbx/ybot/motion/: Running To Turn.fbx  Running.fbx
data/textures/Metal032_1K-JPG/: Metal032_1K-JPG.usda
examples/: 01_draw.cpp  02_texture.cpp  03_model.cpp  04_motion.cpp  05_sphere.cpp  05_text.cpp  05_wireframe.cpp  06_interpolate.cpp  06_root.cpp  06_stitching.cpp  07_stitching.cpp  08_kindata.cpp  08_test.cpp  09_root_projection.cpp  CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
shaders/: pbr.fs  pbr.vs  pbr_lbs.vs  shadow.vs  text3d.fs  text3d.vs  to_cubemap.fs  to_cubemap.vs
